fix(app): fix icon align

--- a/src/app/components/blocks/cards/cards.scss
+++ b/src/app/components/blocks/cards/cards.scss
@@ -76,6 +76,9 @@
           line-height: 27.286px;
         }
       }
+      .vk-heart-icon {
+        vertical-align: sub;
+      }
     }
   }
 }
